fixed_alignment_text_for_news_letter

--- a/frontend/src/components/newsLetter/NewsLetter.css
+++ b/frontend/src/components/newsLetter/NewsLetter.css
@@ -92,4 +92,7 @@
   .newsletter {
     height: auto; /* Let it grow with content */
   }
+  .newsletter {
+    text-align: center;
+  }
 }
